--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://dhruvanand214.github.io/loading.github.io/css/styles.css">
+    <link rel="stylesheet" href="https://https://dhruvanand214.github.io/loading.github.io/css1/styles5.css">
     <title>Cube</title>
 </head>
 <body>
